Update sample app with encrypt new file option

--- a/app/src/main/res/layout/new_file.xml
+++ b/app/src/main/res/layout/new_file.xml
@@ -20,4 +20,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/label_content"
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp"/>
+
+    <EditText
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:lines="3"/>
+
+    <CheckBox
+        android:id="@+id/checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:text="@string/encrypt_the_content"/>
+
 </LinearLayout>
