--- a/app/src/main/res/layout/update_item_dialog.xml
+++ b/app/src/main/res/layout/update_item_dialog.xml
@@ -6,6 +6,7 @@
               android:paddingBottom="16dp">
 
     <TextView
+        android:id="@+id/title"
         android:textSize="14sp"
         android:layout_width="match_parent"
         android:layout_height="56dp"
