Also copy will work

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,6 +22,7 @@
             android:visibility="gone">
 
             <TextView
+                android:id="@+id/moving_file_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
