--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,8 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/decrypt"
+        android:id="@+id/switch_type"
         android:orderInCategory="10"
         app:showAsAction="never"
-        android:title="@string/label_decrypt" />
+        android:title="Switch to internal" />
+
+    <item
+        android:id="@+id/order"
+        android:orderInCategory="20"
+        android:title="Order by ..."
+        app:showAsAction="never"/>
+
 </menu>
