--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -65,6 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:ellipsize="start"
+            android:foreground="?android:attr/selectableItemBackground"
             android:gravity="center_vertical"
             android:lines="1"
             android:paddingLeft="16dp"
