--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/switch_type"
+        android:id="@+id/order"
         android:orderInCategory="10"
-        app:showAsAction="never"
-        android:title="Switch to internal" />
+        android:title="@string/order_by"
+        app:showAsAction="never"/>
 
     <item
-        android:id="@+id/order"
+        android:id="@+id/filter"
         android:orderInCategory="20"
-        android:title="Order by ..."
+        android:title="@string/filter"
         app:showAsAction="never"/>
 
 </menu>
