--- a/app/src/main/res/menu/path_menu.xml
+++ b/app/src/main/res/menu/path_menu.xml
@@ -4,6 +4,22 @@
     <item
         android:id="@+id/go_up"
         android:orderInCategory="1"
-        android:title=".."/>
+        android:title="◀ .."/>
+
+    <item
+        android:id="@+id/go_internal"
+        android:orderInCategory="2"
+        android:title="Go to Internal"/>
+
+    <item
+        android:id="@+id/go_external"
+        android:orderInCategory="3"
+        android:title="Go to External"
+        android:visible="false"/>
+
+    <item
+        android:id="@+id/go_public"
+        android:orderInCategory="4"
+        android:title="Public Directories ..."/>
 
 </menu>
