Ask for permissions

--- a/app/src/main/res/menu/path_menu.xml
+++ b/app/src/main/res/menu/path_menu.xml
@@ -17,9 +17,9 @@
         android:title="Go to External"
         android:visible="false"/>
 
-    <item
-        android:id="@+id/go_public"
-        android:orderInCategory="4"
-        android:title="Public Directories ..."/>
+    <!--<item-->
+        <!--android:id="@+id/go_public"-->
+        <!--android:orderInCategory="4"-->
+        <!--android:title="Public Directories ..."/>-->
 
 </menu>
